[SONAR] File storage refactor